# hackage-server

./: hackage-server.cabal
.github/workflows/: haskell-ci.yml  nix-shell.yml
Distribution/Server/Features/: Core.hs  PackageInfoJSON.hs
